[workspace]
members = ["tools/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
argh = "0.1.12"
rand = "0.8.5"
rstest = "0.23.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_with = "3.11.0"
serde_yaml = "0.9.34+deprecated"
snafu = "0.8.5"
strum = { version = "0.26.3", features = ["derive"] }
