[workspace]
members = ["tools/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
argh = "0.1.12"
rand = "0.8.5"
rstest = "0.23.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_with = "3.11.0"
serde_yaml = "0.9.34+deprecated"
snafu = "0.8.5"
strum = { version = "0.26.3", features = ["derive"] }

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
