[package]
name = "interu"
version = "0.1.0"
edition.workspace = true

[dependencies]
argh.workspace = true
rand.workspace = true
rstest.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
strum.workspace = true
tracing.workspace = true
